Thu Aug 15 12:04:24 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/slave.c: remove some dead code.  Ensure euid's
	  in more places.  open .xsession-errors even on nfs dirs properly.
	  For the Init/PreSession/PostSession scripts always setup the
	  GDM_PARENT_* stuff for Xnest displays.  Don't use temp files, but
	  name the temporary auth file by the display name and whack it
	  on server stop.  The Init/PreSession/PostSession scripts now
	  execute /<displayname>, if not found then /<hostname>, if not
	  found and XDMCP then /XDMCP, if not found and flexi then /Flexi,
	  and only if none of those are found then /Default.

	* daemon/errorgui.c: show label and entry in the question dialog,
	  fixes problems when asking for questions during autologin.  Also
	  set cursor to pointer.

	* daemon/slave.c: set cursor to pointer after forking slave.  This
	  should fix possible busy cursor stuck after an autologin.

	* config/PostSession: spelling fix

	* daemon/verify-pam.c: add extra message for automatic login
	  for standalone conversation thingie.  This uses already translated
	  string.

	* daemon/gdm.c: wait 2 seconds between killing local servers,
	  otherwise things go very very bad on some machines (such as eating
	  my keyboard on mine)

	* configure.in, Makefile.am, gdm-stop.in: new script to just SIGTERM
	  the gdm binary.  Useful for debugging

2002-08-15  jacob berkman  <jacob@ximian.com>

	* gui/greeter/Makefile.am (EXTRA_DIST): include gdmthemetester

Wed Aug 14 19:59:26 2002  George Lebl <jirka@5z.com>

	* config/Default, config/gdm.conf.in, daemon/display.c,
	  daemon/gdm.h, daemon/slave.c, gui/greeter/greeter_item_capslock.c:
	  Set GDM_PARENT_DISPLAY and GDM_PARENT_XAUTHORITY for greeter and
	  the Init script.  In the Init script try to migrate the keyboard
	  configuration to the new server.  Also kill the -kb option from the
	  Xnest command line.  This should fix all the fun problems with