@@ -1,3 +1,8 @@
+Mon Aug 19 11:53:56 2002  George Lebl <jirka@5z.com>
+
+	* gui/gdmXnestchooser.c: bind signals INT/TERM/HUP and send a SIGTERM
+	  to the xnest when we get them.
+
 Thu Aug 15 12:04:24 2002  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.c, daemon/slave.c: remove some dead code.  Ensure euid's
